--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- header section -->
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#home" class="logo">Portfolio | <span>Mazharul</span></a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
